[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/lava.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 8 )

[node name="lava" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="body_entered" from="." to="." method="_on_lava_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_lava_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
